[package]
name = "app"
version = "0.4.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
font-kit = { version = "0.14", features = ["source"] }
eframe = { version = "0.30", features = ["persistence"] }
log = "0.4"
rfd = "0.15"
env_logger = "0.11"
strum = { version = "0.26", features = ["derive"] }
regex = "1.0"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true # 启用增量编译
